# lifo4-ems

./: .env.example  .gitignore  AUDITING_PHASE_1_COMPLETE.md  AUDITORIA_TECNICA_COMPLETA.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  FASES_1-10_COMPLETA.md  FASE_1_STATUS.md  FASE_2_COMPLETA.md  MIGRATION_MONOREPO.md  PROGRESS.md  QUICK_START.md  README.md  TAREFA_4_SUMMARY.md  deploy.sh  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  mock-server.js  package-lock.json  package.json
ai-service/: .env.example  (+2 more)
apps/edge/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/edge/config/: default.yaml  modbus-map.yaml  mosquitto-dev.conf  safety-limits.yaml  site-template.yaml
apps/edge/scripts/: install.sh  simulate_bms.py
apps/edge/src/: __init__.py  config.py  main.py
apps/edge/src/communication/: modbus_client.py  mqtt_client.py  protocol_handler.py
apps/edge/src/control/: __init__.py  arbitrage.py  black_start.py  control_loop.py  decision_engine.py  peak_shaving.py  solar_self.py
apps/edge/src/data/: cache_manager.py  local_db.py  sync_manager.py  telemetry_buffer.py
apps/edge/src/ml/: inference.py
apps/edge/src/provisioning/: bootstrap.py  ota_updater.py
apps/edge/src/safety/: __init__.py  limits.py  safety_manager.py  watchdog.py
apps/edge/tests/: test_control_loop.py  test_decision_engine.py  test_modbus.py  test_safety.py
apps/ml-service/: Dockerfile  pyproject.toml  requirements.txt
apps/ml-service/src/: main.py
apps/ml-service/tests/: test_forecast.py  test_onnx_conversion.py  test_training.py
(+655 files in other folders)
